some tweaks and also added builds

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h3>Recent Leagues</h3>
                 <div id="league-history-list"></div>
             </div>
+            <div class="button-container">
+                <button id="clearHistoryBtn" class="btn btn-danger">Clear History</button>
+            </div>
         </div>
         <div id="main-content" style="display: none;">
             <div class="header">
